@@ -5,6 +5,7 @@ acct_mgr-0.5 (not yet released) - branch 0.11
  resolved issues
  * #8217: Race condition when creating new accounts
  * #10740: Checkbox columns are too wide on the Accounts: Cleanup page
+ * #10754: Selected checkboxes should determine Accounts: Cleanup page items
  * #10772: ProgrammingError: operator does not exist: text = integer
  * #10829: Consider renaming 'Save' buttons to 'Apply changes'
  * #10910: Unable to change full name
